<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btnNuevoIncidente"
        android:paddingTop="12dp"
        android:paddingBottom="80dp"
        android:clipToPadding="false"/>

    <Button
        android:id="@+id/btnFAQ"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/btnNuevoIncidente"
        android:text="Consultar FAQ"
        android:backgroundTint="#A7D88C"
        android:textColor="#000000"
        android:textStyle="bold"
        android:layout_margin="8dp"/>

    <Button
        android:id="@+id/btnNuevoIncidente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="NUEVO INCIDENTE"
        android:backgroundTint="#A7D88C"
        android:textColor="#000000"
        android:textStyle="bold"
        android:layout_margin="8dp"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnChatbot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_margin="16dp"
        android:layout_alignParentBottom="true"
        android:contentDescription="Abrir chatbot"
        android:src="@android:drawable/ic_dialog_email"
        android:tint="#FFFFFF"
        android:backgroundTint="#4CAF50" />

</RelativeLayout>